Added cloudfront extensiont to the 3rd party list

--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -41,6 +41,10 @@ title: "Community Extensions"
     <a href="https://github.com/fgrehm/middleman-blog-drafts">middleman-blog-drafts</a>
     &mdash; An addon for middleman-blog that simplifies draft posts creation and publishing.
   </li>
+  <li>
+    <a href="https://github.com/andrusha/middleman-cloudfront">middleman-cloudfront</a>
+    &mdash; Invalidate CloudFront cache after your build was deployed to S3.
+  </li>
 </ul>
 
 <h2>Paid Extensions</h2>
