Added Single Page with Bourbon template

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -33,6 +33,10 @@ title: "Community Project Templates"
     <a href="https://github.com/pixelsonly/middleman-phonegap">middleman-phonegap</a>
     &mdash; Phonegap integration template with Haml, Sass, Coffeescript. Automatically compiles and emulates Phonegap application after build.
   </li>
+  <li>
+    <a href="https://github.com/edwardloveall/middleman-template-single-page-with-bourbon">Single Page with Bourbon</a>
+    &mdash; Good for a [single page](http://timbreapp.com) site. Also integrates [Bourbon](http://bourbon.io).
+  </li>
 </ul>
 
 <footer>
