Added "Amicus" template and alphabetized the template list.

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -6,32 +6,36 @@ title: "Community Project Templates"
 
 <ul>
   <li>
-    <a href="https://github.com/dannyprose/Middleman-HTML5BP-HAML">HTML5 Boilerplate: HAML & SCSS</a>
-    &mdash; HTML5 Boilerplate 3.0 converted to HAML. <a href="http://susy.oddbird.net/">Susy</a> ready.
-  </li>
-  <li>
-    <a href="https://github.com/nsteiner/middleman-smacss">Middleman-SMACSS</a>
-    &mdash; SMACSS type starter template for Middleman.
-  </li>
-  <li>
-    <a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
-  	&mdash; Basic project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
+    <a href="https://github.com/nathos/amicus">Amicus</a>
+    &mdash; HTML5 Boilerplate 4.0, Sass, Compass & Susy with a responsive layout and up-to-date components.
   </li>
   <li>
     <a href="https://github.com/theblacksmith/chubbs">CHUBBS!</a>
-  	&mdash; Middleman Compass Haml (Uhu!) Boilerplate Bootstrap Sass Template from <a href="http://svallory.github.com/">The Blacksmith</a>.
+    &mdash; Middleman Compass Haml (Uhu!) Boilerplate Bootstrap Sass Template from <a href="http://svallory.github.com/">The Blacksmith</a>.
+  </li>
+  <li>
+    <a href="https://github.com/dannyprose/Middleman-HTML5BP-HAML">HTML5 Boilerplate: HAML & SCSS</a>
+    &mdash; HTML5 Boilerplate 3.0 converted to HAML. <a href="http://susy.oddbird.net/">Susy</a> ready.
   </li>
   <li>
     <a href="https://github.com/vocino/middleman-foundation">Middleman-Foundation</a>
     &mdash; ZURB Foundation in Compass, SCSS &amp; HAML.
   </li>
   <li>
-    <a href="https://github.com/mattolson/middleman-zurb-template">middleman-zurb-template</a>
-    &mdash; Middleman blog template containing ZURB Foundation and sensible default components and templates
+    <a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
+    &mdash; Basic project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
   </li>
   <li>
     <a href="https://github.com/pixelsonly/middleman-phonegap">middleman-phonegap</a>
     &mdash; Phonegap integration template with Haml, Sass, Coffeescript. Automatically compiles and emulates Phonegap application after build.
+  </li>
+  <li>
+    <a href="https://github.com/nsteiner/middleman-smacss">Middleman-SMACSS</a>
+    &mdash; SMACSS type starter template for Middleman.
+  </li>
+  <li>
+    <a href="https://github.com/mattolson/middleman-zurb-template">middleman-zurb-template</a>
+    &mdash; Middleman blog template containing ZURB Foundation and sensible default components and templates
   </li>
   <li>
     <a href="https://github.com/edwardloveall/middleman-template-single-page-with-bourbon">Single Page with Bourbon</a>
