fix template error
3rd-party-project-templates page use ERb, not Markdown.

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -39,7 +39,7 @@ title: "Community Project Templates"
   </li>
   <li>
     <a href="https://github.com/edwardloveall/middleman-template-single-page-with-bourbon">Single Page with Bourbon</a>
-    &mdash; Good for a [single page](http://timbreapp.com) site. Also integrates [Bourbon](http://bourbon.io).
+    &mdash; Good for a <a href="http://timbreapp.com">single page</a> site. Also integrates <a href="http://bourbon.io">Bourbon</a>.
   </li>
 </ul>
 
