--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -4,7 +4,12 @@ title: "Community Extensions"
 
 <h1>Community Extensions</h1>
 
+
 <ul>
+  <li>
+    <a href="https://github.com/middleman/middleman-syntax">middleman-syntax</a>
+    &mdash; Code syntax highlighting
+  </li>
   <li>
     <a href="https://github.com/middleman/middleman-smusher">middleman-smusher</a>
     &mdash; Compress Images during Build
