--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <%= stylesheet_link_tag "site" %>
+    <%= gzip_css_on_build "site" %>
     <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Questrial|Arvo" %>
     <title><%= page_title %></title>
   </head>
@@ -32,8 +32,8 @@
       </div>
     </footer>
     
-    <%= javascript_include_tag "highlight.pack" %>
-    <%= stylesheet_link_tag "solarized_light" %>
+    <%= gzip_js_on_build "highlight.pack" %>
+    <%= gzip_css_on_build "solarized_light" %>
     <script>hljs.initHighlightingOnLoad();</script>
 
 
