Add http://mrcthms.com to Build Using Middleman section

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -53,6 +53,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.cileos.com" target="_blank">http://www.cileos.com</a></li>
   <li><a href="http://euruko2013.org" target="_blank">http://euruko2013.org</a></li>
   <li><a href="http://kesseki.harahara.org" target="_blank">http://kesseki.harahara.org</a></li>
+  <li><a href="http://mrcthms.com" target="_blank">http://mrcthms.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
@@ -65,7 +66,7 @@ title: "Sites Built Using Middleman"
 <ul>
   <li><a href="http://awardwinningfjords.com/" target="_blank">http://awardwinningfjords.com/</a></li>
   <li><a href="http://blog.troutwine.us/" target="_blank">http://blog.troutwine.us/</a></li>
-  <li><a href="http://luebke-wohnen.de/" target="_blank">http://luebke-wohnen.de/</a></li> 
+  <li><a href="http://luebke-wohnen.de/" target="_blank">http://luebke-wohnen.de/</a></li>
   <li><a href="http://benhollis.net" target="_blank">http://benhollis.net</a></li>
   <li><a href="http://darrenknewton.com" target="_blank">http://darrenknewton.com</a></li>
   <li><a href="http://thirteen23.com/garage/" target="_blank">http://thirteen23.com/garage/</a></li>
