--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -31,6 +31,14 @@ title: "Community Extensions"
     &mdash; Synchronise your Middleman build to S3 and more.
   </li>
   <li>
+    <a href="https://github.com/fredjean/middleman-s3_sync">middleman-s3_sync</a> 
+    &mdash; Tries really hard not to push files to S3 (but will gladly do it if it must).
+  </li>
+  <li>
+    <a href="https://github.com/fredjean/middleman-s3_redirect">middleman-s3_redirect</a>
+    &mdash; Configure S3 to redirect URLs to a new location.
+  </li>
+  <li>
     <a href="http://tvaughan.github.com/middleman-deploy/">middleman-deploy</a>
     &mdash; Deploy a Middleman built site over rsync.
   </li>
