--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -71,6 +71,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://darrenknewton.com" target="_blank">http://darrenknewton.com</a></li>
   <li><a href="http://thirteen23.com/garage/" target="_blank">http://thirteen23.com/garage/</a></li>
   <li><a href="https://www.bionicspirit.com/" target="_blank">http://bionicspirit.com</a> (<a href="https://github.com/alexandru/bionicspirit.com">source code</a>)</li>
+  <li><a href="http://mattolson.com/" target="_blank">http://mattolson.com</a></li>
 </ul>
 
 <footer>
