--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -54,6 +54,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://euruko2013.org" target="_blank">http://euruko2013.org</a></li>
   <li><a href="http://kesseki.harahara.org" target="_blank">http://kesseki.harahara.org</a></li>
   <li><a href="http://mrcthms.com" target="_blank">http://mrcthms.com</a></li>
+  <li><a href="http://rubycloud.com" target="_blank">http://rubycloud.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
