--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -67,6 +67,7 @@ title: "Sites Built Using Middleman"
 <ul>
   <li><a href="http://awardwinningfjords.com/" target="_blank">http://awardwinningfjords.com/</a></li>
   <li><a href="http://blog.troutwine.us/" target="_blank">http://blog.troutwine.us/</a></li>
+  <li><a href="http://blog.vanutsteen.nl/" target="_blank">http://blog.vanutsteen.nl</a> (<a href="https://github.com/LeonB/blog.vanutsteen.nl">source code</a>)</li>
   <li><a href="http://luebke-wohnen.de/" target="_blank">http://luebke-wohnen.de/</a></li>
   <li><a href="http://benhollis.net" target="_blank">http://benhollis.net</a></li>
   <li><a href="http://darrenknewton.com" target="_blank">http://darrenknewton.com</a></li>
