Adds 'converser.io' to list of sites.

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -56,6 +56,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://mrcthms.com" target="_blank">http://mrcthms.com</a></li>
   <li><a href="http://rubycloud.com" target="_blank">http://rubycloud.com</a></li>
   <li><a href="http://getquaderno.com" target="_blank">http://getquaderno.com</a></li>
+  <li><a href="http://converser.io" target="_blank">http://converser.io</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
