Added middleman-rouge syntax highlighting

--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -11,6 +11,10 @@ title: "Community Extensions"
     &mdash; Code syntax highlighting
   </li>
   <li>
+    <a href="https://github.com/Linuus/middleman-rouge">middleman-rouge</a>
+    &mdash; Code syntax highlighting using Rouge and Redcarpet
+  </li>
+  <li>
     <a href="https://github.com/middleman/middleman-smusher">middleman-smusher</a>
     &mdash; Compress Images during Build
   </li>
