Added Project template for Heroku

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -41,6 +41,10 @@ title: "Community Project Templates"
     <a href="https://github.com/edwardloveall/middleman-template-single-page-with-bourbon">Single Page with Bourbon</a>
     &mdash; Good for a <a href="http://timbreapp.com">single page</a> site. Also integrates <a href="http://bourbon.io">Bourbon</a>.
   </li>
+  <li>
+    <a href="https://github.com/indirect/middleman-heroku-static-app">Middleman-Heroku</a>
+    &mdash; Basic project template for Heroku
+  </li>
 </ul>
 
 <footer>
