adding middleman-blog project template

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -45,6 +45,10 @@ title: "Community Project Templates"
     <a href="https://github.com/indirect/middleman-heroku-static-app">Middleman-Heroku</a>
     &mdash; Basic project template for Heroku
   </li>
+  <li>
+    <a href="https://github.com/BryanSchuetz/middleman-blog-frameless">Middleman-Blog-Frameless</a>
+    &mdash; Basic middleman-blog project template with adaptive SAS grid from <a href="http://framelessgrid.com/">Frameless</a>.
+  </li>
 </ul>
 
 <footer>
