--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -23,7 +23,7 @@ title: "Community Project Templates"
   </li>
   <li>
     <a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
-    &mdash; Basic project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
+    &mdash; Basic project template with adaptive Sass grid from <a href="http://framelessgrid.com/">Frameless</a>.
   </li>
   <li>
     <a href="https://github.com/pixelsonly/middleman-phonegap">middleman-phonegap</a>
@@ -47,7 +47,7 @@ title: "Community Project Templates"
   </li>
   <li>
     <a href="https://github.com/BryanSchuetz/middleman-blog-frameless">Middleman-Blog-Frameless</a>
-    &mdash; Basic middleman-blog project template with adaptive SAS grid from <a href="http://framelessgrid.com/">Frameless</a>.
+    &mdash; Basic middleman-blog project template with adaptive Sass grid from <a href="http://framelessgrid.com/">Frameless</a>.
   </li>
 </ul>
 
