--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -57,6 +57,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://rubycloud.com" target="_blank">http://rubycloud.com</a></li>
   <li><a href="http://getquaderno.com" target="_blank">http://getquaderno.com</a></li>
   <li><a href="http://converser.io" target="_blank">http://converser.io</a></li>
+  <li><a href="http://davidanguita.name/en/" target="_blank">http://davidanguita.name</a> (<a href="https://github.com/danguita/davidanguita.name">source code</a>)</li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
