--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -62,6 +62,10 @@ title: "Community Extensions"
     <a href="https://github.com/andrusha/middleman-cloudfront">middleman-cloudfront</a>
     &mdash; Invalidate CloudFront cache after your build was deployed to S3.
   </li>
+  <li>
+    <a href="https://github.com/neo/middleman-gh-pages">middleman-gh-pages</a>
+    &mdash; Easy deployment of Middleman sites to Github Pages.
+  </li>
 </ul>
 
 <h2>Paid Extensions</h2>
