Update 3rd party project with middleman-ratchet

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -45,6 +45,10 @@ title: "Community Project Templates"
     <a href="https://github.com/indirect/middleman-heroku-static-app">Middleman-Heroku</a>
     &mdash; Basic project template for Heroku
   </li>
+  <li>
+    <a href="https://github.com/caedes/middleman-ratchet">Middleman-Ratchet</a>
+    &mdash; Middleman plugin that adds support for the <a href="http://maker.github.com/ratchet/">Ratchet</a> prototyping mobile.
+  </li>
 </ul>
 
 <footer>
