--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -78,6 +78,7 @@ title: "Sites Built Using Middleman"
   <li><a href="https://www.bionicspirit.com/" target="_blank">http://bionicspirit.com</a> (<a href="https://github.com/alexandru/bionicspirit.com">source code</a>)</li>
   <li><a href="http://mattolson.com/" target="_blank">http://mattolson.com</a></li>
   <li><a href="http://carl.hoyer.ca/" target="_blank">http://carl.hoyer.ca</a> (<a href="https://github.com/choyer/carl.hoyer.ca">source code</a>)</li>
+  <li><a href="http://blog.startae.com.br/" target="_blank">http://blog.startae.com.br</a></li>
 </ul>
 
 <footer>
