Add nyanstagram.com to Built Using Middleman

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -58,6 +58,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://getquaderno.com" target="_blank">http://getquaderno.com</a></li>
   <li><a href="http://converser.io" target="_blank">http://converser.io</a></li>
   <li><a href="http://davidanguita.name/en/" target="_blank">http://davidanguita.name</a> (<a href="https://github.com/danguita/davidanguita.name">source code</a>)</li>
+  <li><a href="http://www.nyanstagram.com" target="_blank">http://www.nyanstagram.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
