added project template and blog links

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -49,6 +49,10 @@ title: "Community Project Templates"
     <a href="https://github.com/caedes/middleman-ratchet">Middleman-Ratchet</a>
     &mdash; Middleman plugin that adds support for the <a href="http://maker.github.com/ratchet/">Ratchet</a> prototyping mobile.
   </li>
+  <li>
+    <a href="https://github.com/BryanSchuetz/middleman-blog-frameless">Middleman-Blog-Frameless</a>
+    &mdash; Basic Middleman-Blog project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
+  </li>
 </ul>
 
 <footer>
