--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -81,6 +81,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://carl.hoyer.ca/" target="_blank">http://carl.hoyer.ca</a> (<a href="https://github.com/choyer/carl.hoyer.ca">source code</a>)</li>
   <li><a href="http://blog.startae.com.br/" target="_blank">http://blog.startae.com.br</a></li>
   <li><a href="http://www.mattonrails.com/" target="_blank">http://www.mattonrails.com</a></li>
+  <li><a href="http://distresssignal.org" target="_blank">http://distresssignal.org</a></li>
 </ul>
 
 <footer>
