Added new haml, sass, coffee template
https://github.com/pixelsonly/middleman-hamlsasscoffee

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -53,6 +53,9 @@ title: "Community Project Templates"
     <a href="https://github.com/BryanSchuetz/middleman-blog-frameless">Middleman-Blog-Frameless</a>
     &mdash; Basic Middleman-Blog project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
   </li>
+  <li>
+    <a href="https://github.com/pixelsonly/middleman-hamlsasscoffee">Middleman setup with Haml, SASS and Coffeescript</a>
+  </li>
 </ul>
 
 <footer>
