add my project template

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -56,6 +56,10 @@ title: "Community Project Templates"
   <li>
     <a href="https://github.com/pixelsonly/middleman-hamlsasscoffee">Middleman setup with Haml, SASS and Coffeescript</a>
   </li>
+  <li>
+    <a href="https://github.com/blackbiron/middleman-impress">middleman-impress</a>
+    &mdash; Middleman setup with Haml, SASS and impress.js* for HTML presentation
+  </li>
 </ul>
 
 <footer>
