Added ResumeMan to the list of third party project templates

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -60,6 +60,10 @@ title: "Community Project Templates"
     <a href="https://github.com/blackbiron/middleman-impress">middleman-impress</a>
     &mdash; Middleman setup with Haml, SASS and impress.js* for HTML presentation
   </li>
+  <li>
+    <a href="https://github.com/reefab/ResumeMan">ResumeMan</a></a>
+    &mdash; A pre-configured Middleman setup for publishing resumes with built-in PDF export
+    </li>
 </ul>
 
 <footer>
