Adding my blog to the list
Started using middleman, middleman-blogging and middleman-s3_sync to build and publish a blog to an S3 bucket.

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -82,6 +82,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://blog.startae.com.br/" target="_blank">http://blog.startae.com.br</a></li>
   <li><a href="http://www.mattonrails.com/" target="_blank">http://www.mattonrails.com</a></li>
   <li><a href="http://distresssignal.org" target="_blank">http://distresssignal.org</a></li>
+  <li><a href="http://fredjean.net">http://fredjean.net</a></li>
 </ul>
 
 <footer>
