added my site to the 'Sites Built Using Middleman' section

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -60,6 +60,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://davidanguita.name/en/" target="_blank">http://davidanguita.name</a> (<a href="https://github.com/danguita/davidanguita.name">source code</a>)</li>
   <li><a href="http://www.nyanstagram.com" target="_blank">http://www.nyanstagram.com</a></li>
   <li><a href="http://tarebyte.github.io" target="_blank">http://tarebyte.github.io</a></li>
+  <li><a href="http://gilesthompson.co.nz" target="_blank">http://gilesthompson.co.nz</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
