--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -5,6 +5,7 @@ title: "Sites Built Using Middleman"
 <h1>Sites Built Using Middleman</h1>
 
 <ul>
+  <li><a href="http://sassandcompass.com" target="_blank">http://sassandcompass.com</a></li>
   <li><a href="http://craftyblues.com" target="_blank">http://craftyblues.com</a></li>
   <li><a href="http://www.mandadream.com/" target="_blank">http://www.mandadream.com/</a></li>
   <li><a href="http://sidewalkland.com/" target="_blank">http://sidewalkland.com/</a></li>
