Add archiverapp.com to site built with Middleman

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -62,6 +62,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.nyanstagram.com" target="_blank">http://www.nyanstagram.com</a></li>
   <li><a href="http://tarebyte.github.io" target="_blank">http://tarebyte.github.io</a></li>
   <li><a href="http://gilesthompson.co.nz" target="_blank">http://gilesthompson.co.nz</a></li>
+  <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
