Update guides for 3.1 features

--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -9,7 +9,6 @@
       <li><a href="/asset-pipeline/">Asset Pipeline</a></li>
       <li><a href="/pretty-urls/">Pretty URLs (Directory Indexes)</a></li>
       <li><a href="/livereload/">LiveReload</a></li>
-      <li><a href="/minify-html/">Minify HTML</a></li>
       <li><a href="/blogging/">Blogging</a></li>
   </ul>
 </div>
@@ -17,6 +16,7 @@
 <div class="toc-block">
   <h3>Advanced Features</h3>
   <ul>
+      <li><a href="/advanced/configuration/">Configuring Your Site</a></li>
       <li><a href="/advanced/local-data/">Local Data</a></li>
       <li><a href="/advanced/localization/">Localization (i18n)</a></li>
       <li><a href="/advanced/sitemap/">The Sitemap</a></li>
