--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -70,6 +70,10 @@ title: "Community Extensions"
     <a href="https://github.com/qnyp/middleman-s3_metadata">middleman-s3_metadata</a>
     &mdash; Automates updating metadata (e.g. Content-Type) of specific AWS S3 object.
   </li>
+  <li>
+    <a href="https://github.com/mrship/middleman-jasmine">middleman-jasmine</a>
+    &mdash; Adds the Jasmine runner into a middleman app under the /jasmine path. Support for sprockets.
+  </li>
 </ul>
 
 <h2>Paid Extensions</h2>
