Removing Heroku buildpack because it's deprecated and adding link to middleman heroku static app

--- a/source/community/deployment-solutions.html.erb
+++ b/source/community/deployment-solutions.html.erb
@@ -51,8 +51,8 @@ target 'your-aws-bucket-name', {
 <p>Finally, build middleman and shart it into an S3 bucket.</p>
 <pre><code class="bash">$ middleman build && shart</code></pre>
 
-<h3><a href="https://github.com/indirect/heroku-buildpack-middleman" target="_blank">Heroku buildpack: Middleman</a></h3>
-<p>An Heroku buildpack for Middleman apps</p>
+<h3><a href="https://github.com/indirect/middleman-heroku-static-app" target="_blank">Heroku</a></h3>
+<p>See <a href="https://github.com/indirect/middleman-heroku-static-app" target="_blank">middleman-heroku-static-app</a> for an example application that's ready to deploy to Heroku using the default Ruby buildpack.</p>
 
 <footer>
   <%= link_to "Fork and add your extension on Github", "https://github.com/middleman/middleman-guides/blob/master/source/community/deployment-solutions.html.erb" %>
