--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -74,6 +74,10 @@ title: "Community Extensions"
     <a href="https://github.com/mrship/middleman-jasmine">middleman-jasmine</a>
     &mdash; Adds the Jasmine runner into a middleman app under the /jasmine path. Support for sprockets.
   </li>
+  <li>
+    <a href="https://github.com/mrship/middleman-ember">middleman-ember</a>
+    &mdash; Adds Ember JS into a middleman app. Support for production version under build.
+  </li>
 </ul>
 
 <h2>Paid Extensions</h2>
