Move project templates to directory

--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -30,8 +30,8 @@
 <div class="toc-block">
   <h3>Community</h3>
   <ul>
-      <li><a href="http://directory.middlemanapp.com/">Community Extensions</a></li>
-      <li><a href="/community/3rd-party-project-templates/">Community Project Templates</a></li>
+      <li><a href="http://directory.middlemanapp.com/">Extensions</a></li>
+      <li><a href="http://directory.middlemanapp.com/#/templates/all">Project Templates</a></li>
       <li><a href="/community/deployment-solutions/">Deployment Solutions</a></li>
       <li><a href="/community/built-using-middleman/">Sites Built Using Middleman</a></li>
       <li><a href="http://forum.middlemanapp.com/" target="_blank">Community Forum</a></li>
