--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -22,6 +22,11 @@ title: "Community Project Templates"
     &mdash; ZURB Foundation in Compass, SCSS &amp; HAML.
   </li>
   <li>
+    <a href="https://github.com/leoalves/middleman-gumby-haml.git">Middleman-Gumby-Haml</a>
+    &mdash; Gumby Css Framework in  Sass &amp; HAML.
+  </li>
+
+  <li>
     <a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
     &mdash; Basic project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
   </li>
