--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -63,6 +63,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://tarebyte.github.io" target="_blank">http://tarebyte.github.io</a></li>
   <li><a href="http://gilesthompson.co.nz" target="_blank">http://gilesthompson.co.nz</a></li>
   <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com</a></li>
+  <li><a href="http://davehulihan.com" target="_blank">http://davehulihan.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
@@ -75,7 +76,7 @@ title: "Sites Built Using Middleman"
 <ul>
   <li><a href="http://awardwinningfjords.com/" target="_blank">http://awardwinningfjords.com/</a></li>
   <li><a href="http://blog.troutwine.us/" target="_blank">http://blog.troutwine.us/</a></li>
-  <li><a href="http://blog.vanutsteen.nl/" target="_blank">http://blog.vanutsteen.nl</a> (<a href="https://github.com/LeonB/blog.vanutsteen.nl">source code</a>)</li>
+  <li><a href="http://blog.vanutsteen.nl/" target="_blank">http://blog.vanutsteen.nl</a> d(<a href="https://github.com/LeonB/blog.vanutsteen.nl">source code</a>)</li>
   <li><a href="http://luebke-wohnen.de/" target="_blank">http://luebke-wohnen.de/</a></li>
   <li><a href="http://benhollis.net" target="_blank">http://benhollis.net</a></li>
   <li><a href="http://darrenknewton.com" target="_blank">http://darrenknewton.com</a></li>
