added middleman-combined to 3rd party templates

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -70,7 +70,11 @@ title: "Community Project Templates"
   <li>
     <a href="https://github.com/reefab/ResumeMan">ResumeMan</a></a>
     &mdash; A pre-configured Middleman setup for publishing resumes with built-in PDF export
-    </li>
+  </li>
+  <li>
+    <a href="https://github.com/reefab/ResumeMan">Middleman-Combined</a></a>
+    &mdash; A bare-bones template that includes mobile-first, inline media queries with IE support. Great for prototypes.
+  </li>
 </ul>
 
 <footer>
