--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -5,6 +5,7 @@ title: "Sites Built Using Middleman"
 <h1>Sites Built Using Middleman</h1>
 
 <ul>
+  <li><a href="http://devcenter.wercker.com" target="_blank">http://devcenter.wercker.com</a></li>
   <li><a href="http://sassandcompass.com" target="_blank">http://sassandcompass.com</a></li>
   <li><a href="http://craftyblues.com" target="_blank">http://craftyblues.com</a></li>
   <li><a href="http://www.mandadream.com/" target="_blank">http://www.mandadream.com/</a></li>
@@ -75,6 +76,7 @@ title: "Sites Built Using Middleman"
 <h1>Blogs Using Middleman</h1>
 
 <ul>
+  <li><a href="http://blog.wercker.com" target="_blank">http://blog.wercker.com</a></li>
   <li><a href="http://awardwinningfjords.com/" target="_blank">http://awardwinningfjords.com/</a></li>
   <li><a href="http://blog.troutwine.us/" target="_blank">http://blog.troutwine.us/</a></li>
   <li><a href="http://blog.vanutsteen.nl/" target="_blank">http://blog.vanutsteen.nl</a> (<a href="https://github.com/LeonB/blog.vanutsteen.nl">source code</a>)</li>
