--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -30,9 +30,9 @@
 <div class="toc-block">
   <h3>Community</h3>
   <ul>
-      <li><a href="http://directory.middlemanapp.com/">Extensions</a></li>
+      <li><a href="http://directory.middlemanapp.com/#/extensions/all">Extensions</a></li>
       <li><a href="http://directory.middlemanapp.com/#/templates/all">Project Templates</a></li>
-      <li><a href="/community/deployment-solutions/">Deployment Solutions</a></li>
+      <li><a href="http://directory.middlemanapp.com/#/extensions/deployment">Deployment Solutions</a></li>
       <li><a href="/community/built-using-middleman/">Sites Built Using Middleman</a></li>
       <li><a href="http://forum.middlemanapp.com/" target="_blank">Community Forum</a></li>
       <li><a href="https://github.com/middleman/middleman" target="_blank">GitHub Repository</a></li>
