add mailchimp, mandrill, and stevenosloan.com to list of sites using middleman

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -66,6 +66,10 @@ title: "Sites Built Using Middleman"
   <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com</a></li>
   <li><a href="http://www.leinakanal-gotha.de/" target="_blank">http://www.leinakanal-gotha.de/</a></li>
   <li><a href="http://uandi.com/" target="_blank">http://uandi.com/</a></li>
+  <li><a href="http://busyconf.com" target="_blank">http://busyconf.com</a></li>
+  <li><a href="http://tsumego.tasuki.org" target="_blank">http://tsumego.tasuki.org</a> (<a href="https://github.com/tasuk/tsumego-web">source code</a>)</li>
+  <li><a href="http://mailchimp.com" target="_blank">http://mailchimp.com</a></li>
+  <li><a href="http://mandrill.com" target="_blank">http://mandrill.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
@@ -90,6 +94,8 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.mattonrails.com/" target="_blank">http://www.mattonrails.com</a></li>
   <li><a href="http://distresssignal.org" target="_blank">http://distresssignal.org</a></li>
   <li><a href="http://fredjean.net">http://fredjean.net</a></li>
+  <li><a href="http://busyconf.com/blog/" target="_blank">http://busyconf.com/blog/</a></li>
+  <li><a href="http://stevenosloan.com" target="_blank">http://stevenosloan.com</a></li>
 </ul>
 
 <footer>
