--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -63,6 +63,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://tarebyte.github.io" target="_blank">http://tarebyte.github.io</a></li>
   <li><a href="http://gilesthompson.co.nz" target="_blank">http://gilesthompson.co.nz</a></li>
   <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com</a></li>
+  <li><a href="http://www.leinakanal-gotha.de/" target="_blank">http://www.leinakanal-gotha.de/</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
