--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -64,6 +64,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://gilesthompson.co.nz" target="_blank">http://gilesthompson.co.nz</a></li>
   <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com</a></li>
   <li><a href="http://www.leinakanal-gotha.de/" target="_blank">http://www.leinakanal-gotha.de/</a></li>
+  <li><a href="http://uandi.com/" target="_blank">http://uandi.com/</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
