--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -96,6 +96,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://fredjean.net">http://fredjean.net</a></li>
   <li><a href="http://busyconf.com/blog/" target="_blank">http://busyconf.com/blog/</a></li>
   <li><a href="http://stevenosloan.com" target="_blank">http://stevenosloan.com</a></li>
+  <li><a href="http://4pdj.nl/" target="_blank">http://4pdj.nl</a> (<a href="https://github.com/nathema/4pdj.nl">source code</a>)</li>
 </ul>
 
 <footer>
