--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -70,6 +70,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://tsumego.tasuki.org" target="_blank">http://tsumego.tasuki.org</a> (<a href="https://github.com/tasuk/tsumego-web">source code</a>)</li>
   <li><a href="http://mailchimp.com" target="_blank">http://mailchimp.com</a></li>
   <li><a href="http://mandrill.com" target="_blank">http://mandrill.com</a></li>
+  <li><a href="http://www.librario.de/" target="_blank">http://www.librario.de</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
