Add my site to list of sites built using middleman

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -72,6 +72,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://mailchimp.com" target="_blank">http://mailchimp.com</a></li>
   <li><a href="http://mandrill.com" target="_blank">http://mandrill.com</a></li>
   <li><a href="http://www.librario.de/" target="_blank">http://www.librario.de</a></li>
+  <li><a href="http://www.madebytally.com/" target="_blank">http://www.madebytally.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
