--- a/source/_support.erb
+++ b/source/_support.erb
@@ -5,10 +5,15 @@
   </div>
 
   <div class="sponsor">
-    <h4>Sponsor</h4>
+    <h4>Sponsors</h4>
+
     <a href="http://fjords.cc" target="_blank">
       <%= image_tag "fjords.jpg" %>
       <span>Fjords: Simple Middleman Hosting &amp; Preview URLs</span>
+    </a>
+
+    <a href="http://www.maxcdn.com" target="_blank" id="max">
+      <%= image_tag "maxcdn.svg", :width => "130" %>
     </a>
   </div>
 
