--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -101,6 +101,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://stevenosloan.com" target="_blank">http://stevenosloan.com</a></li>
   <li><a href="http://4pdj.nl/" target="_blank">http://4pdj.nl</a> (<a href="https://github.com/nathema/4pdj.nl">source code</a>)</li>
   <li><a href="http://Andrew.Kvalhe.im/" target="_blank">http://Andrew.Kvalhe.im/</a></li>
+  <li><a href="http://epochwolf.com/" target="_blank">http://epochwolf.com</a></li>
 </ul>
 
 <footer>
