add http://oli-g.me to Sites Built Using Middleman page

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -102,6 +102,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://4pdj.nl/" target="_blank">http://4pdj.nl</a> (<a href="https://github.com/nathema/4pdj.nl">source code</a>)</li>
   <li><a href="http://Andrew.Kvalhe.im/" target="_blank">http://Andrew.Kvalhe.im/</a></li>
   <li><a href="http://epochwolf.com/" target="_blank">http://epochwolf.com</a></li>
+  <li><a href="http://oli-g.me/" target="_blank">http://oli-g.me</a> (<a href="https://github.com/oli-g/oli-g.github.io/tree/source">source code</a>)</li>
 </ul>
 
 <footer>
