Adds michaelboeke.com to Sites Built Using Middleman

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -104,6 +104,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://epochwolf.com/" target="_blank">http://epochwolf.com</a></li>
   <li><a href="http://www.adevelopingstory.com" target="_blank">http://adevelopingstory.com</a></li>
   <li><a href="http://oli-g.me/" target="_blank">http://oli-g.me</a> (<a href="https://github.com/oli-g/oli-g.github.io/tree/source">source code</a>)</li>
+  <li><a href="http://michaelboeke.com/" target="_blank">http://michaelboeke.com/</a></li>
 </ul>
 
 <footer>
