move ads to top

--- a/source/_support.erb
+++ b/source/_support.erb
@@ -1,8 +1,7 @@
 <div id="support">
-  <div class="donate">
-    <h4>Support Us</h4>
-    <p><a href="https://spb.io/s/4dXbHBorC3" target="_blank" class="sbe-button">With a Donation</a></p>
-  </div>
+  <!-- BuySellAds Zone Code -->
+  <div id="bsap_1280677" class="bsarocks bsap_989fc05e297a314a92ad3f33cef85fd4"></div>
+  <!-- End BuySellAds Zone Code -->
 
   <div class="sponsor">
     <h4>Sponsors</h4>
@@ -17,7 +16,9 @@
     </a>
   </div>
 
-  <!-- BuySellAds Zone Code -->
-  <div id="bsap_1280677" class="bsarocks bsap_989fc05e297a314a92ad3f33cef85fd4"></div>
-  <!-- End BuySellAds Zone Code -->
+  <div class="donate">
+    <script data-gittip-username="tdreyno"
+        src="//gttp.co/v1.js"></script>
+    <p><br><a href="https://spb.io/s/4dXbHBorC3" target="_blank" class="sbe-button">Donate!</a><br><br></p>
+  </div>
 </div>
